test docker install on macos

--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -39,12 +39,8 @@ runs:
           name: Install Docker on MacOS
           shell: bash
           run: |
-              brew update
-              brew install docker
-              brew install colima
-              LIMACTL_PATH=$(brew --prefix)/bin/limactl
-              sudo curl -L -o $LIMACTL_PATH https://github.com/mikekazakov/lima-nohvf/raw/master/limactl && sudo chmod +x $LIMACTL_PATH
-              colima start --network-address --arch arm64 --vm-type=qemu
+              brew install colima docker docker-compose
+              colima start
               docker --version
 
         - if: inputs.scope=='all'
