--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -39,8 +39,12 @@ runs:
           name: Install Docker on MacOS
           shell: bash
           run: |
-              brew install colima docker docker-compose
-              colima start
+              brew update
+              brew install docker@27.3.1
+              brew install colima@0.7.6
+              LIMACTL_PATH=$(brew --prefix)/bin/limactl
+              sudo curl -L -o $LIMACTL_PATH https://github.com/mikekazakov/lima-nohvf/raw/master/limactl && sudo chmod +x $LIMACTL_PATH
+              colima start --network-address --arch arm64 --vm-type=qemu
               docker --version
 
         - if: inputs.scope=='all'
