--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -42,6 +42,7 @@ runs:
               brew update
               brew install docker qemu
               brew install colima
+              LIMACTL_PATH=$(brew --prefix)/bin/limactl
               sudo curl -L -o $LIMACTL_PATH https://github.com/mikekazakov/lima-nohvf/raw/master/limactl && sudo chmod +x $LIMACTL_PATH
               colima start --network-address --arch arm64 --vm-type=qemu
               docker --version
