--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -35,7 +35,7 @@ jobs:
         uses: ./.github/workflows/remote-test.yml
         with:
             metadata-matrix: '["zookeeper"]'
-    assemebly-test:
+    assembly-test:
         uses: ./.github/workflows/assembly-test.yml
     tpc-h-regression-test:
         uses: ./.github/workflows/tpc-h.yml
