--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -89,7 +89,7 @@ jobs:
             - name: Run ZooKeeper2
               uses: ./.github/actions/zookeeperRunner
               with:
-                port: 2182
+                  port: 2182
 
             - name: Run DB
               uses: ./.github/actions/dbRunner
@@ -126,7 +126,7 @@ jobs:
                   Set-Filter-Fragment-OFF: "true"
                   Metadata: ${{ matrix.metadata }}
                   Root-Dir-Path: "IGinX"
-                  zookeeper-port: '2182'
+                  zookeeper-port: "2182"
 
             - name: Install New IGinX with Maven
               shell: bash
