--- a/.github/actions/tpchDataWriter/action.yml
+++ b/.github/actions/tpchDataWriter/action.yml
@@ -26,3 +26,32 @@ runs:
           with:
               version: ${VERSION}
               if-stop: "true"
+
+        - name: Start Old IGinX
+          if: inputs.status != 'ok'
+          shell: bash
+          run: |
+            cd IGinX/core/target/iginx-core-${VERSION}
+            pwd
+            export IGINX_HOME=$PWD
+            echo "IGinX home path: $IGINX_HOME"
+            cd ..
+            chmod +x iginx-core-${VERSION}/sbin/start_iginx.sh
+            nohup iginx-core-${VERSION}/sbin/start_iginx.sh > ../../iginx-${VERSION}.log 2>&1 &
+
+        # because two IGinXs are using different ZKs, we need to register UDFs in both nodes
+        # the data only needs to be inserted once in new IGinX, and we set engine config in old IGinX to dummy
+        - name: Register UDF
+          shell: bash
+          run: mvn test -q -Dtest=TPCHDataGeneratorIT#registerUDF -DfailIfNoTests=false -P-format
+
+        - name: Show Old IGinX log
+          if: always()
+          shell: bash
+          run: cat IGinX/iginx-*.log
+
+        - name: Stop Old IGinX
+          uses: ./.github/actions/iginxRunner
+          with:
+            version: ${VERSION}
+            if-stop: "true"
