--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -127,7 +127,7 @@ jobs:
                   Metadata: ${{ matrix.metadata }}
                   Root-Dir-Path: "IGinX"
                   zookeeper-port: "2182"
-                  Has-Data: 'true'
+                  Has-Data: "true"
 
             - name: Install New IGinX with Maven
               shell: bash
