--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -40,7 +40,7 @@ runs:
           shell: bash
           run: |
               brew update
-              brew install docker
+              brew install docker qemu
               brew install colima
               LIMACTL_PATH=$(brew --prefix)/bin/limactl
               sudo curl -L -o $LIMACTL_PATH https://github.com/mikekazakov/lima-nohvf/raw/master/limactl && sudo chmod +x $LIMACTL_PATH
