--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -117,7 +117,7 @@ jobs:
               run: |
                   cd IGinX
                   mvn clean package -DskipTests -P-format -q
-                  cp -rf ${GITHUB_WORKSPACE}/test/src/test/resources/tpch/udf/* core/target/iginx-core-${VERSION}/udf_funcs/python_scripts/
+#                  cp -rf ${GITHUB_WORKSPACE}/test/src/test/resources/tpch/udf/* core/target/iginx-core-${VERSION}/udf_funcs/python_scripts/
 
             - name: Change Old IGinX Config
               uses: ./.github/actions/confWriter
@@ -127,7 +127,6 @@ jobs:
                   Metadata: ${{ matrix.metadata }}
                   Root-Dir-Path: "IGinX"
                   zookeeper-port: "2182"
-                  Has-Data: "true"
 
             - name: Install New IGinX with Maven
               shell: bash
@@ -139,6 +138,7 @@ jobs:
                   DB-name: ${{ matrix.DB-name }}
                   Set-Filter-Fragment-OFF: "true"
                   Metadata: ${{ matrix.metadata }}
+                  Has-Data: "true"
 
             - name: Insert Data into DB
               uses: ./.github/actions/tpchDataWriter
