--- a/.github/actions/dbConfWriter/action.yml
+++ b/.github/actions/dbConfWriter/action.yml
@@ -5,6 +5,10 @@ inputs:
         description: "DB name"
         required: false
         default: IoTDB12
+    DB-port:
+      description: "DB port"
+      required: false
+      default: "0"
     Root-Dir-Path:
         description: "the path of IGinX root directory"
         required: false
@@ -97,3 +101,20 @@ runs:
           with:
               paths: ${{ inputs.Root-Dir-Path }}/conf/config.properties
               statements: s|^#storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#password=mysql#has_data=false#meta_properties_path=your-meta-properties-path|storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#has_data=false#meta_properties_path=${{ steps.mysql-properties.outputs.path }}|g
+
+        - if: inputs.DB-port!='0'
+          name: Change db port
+          shell: bash
+          run: |
+            if [ "$RUNNER_OS" == "Linux" ]; then
+              sudo sed -i -E "s/^(storageEngineList=127\.0\.0\.1#)[0-9]+(#.*)/\1${{ inputs.DB-port }}\2/" ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
+            elif [ "$RUNNER_OS" == "Windows" ]; then
+              sed -i -E "s/^(storageEngineList=127\.0\.0\.1#)[0-9]+(#.*)/\1${{ inputs.DB-port }}\2/" ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
+            elif [ "$RUNNER_OS" == "macOS" ]; then
+              sudo sed -i '' -E "s/^(storageEngineList=127\.0\.0\.1#)[0-9]+(#.*)/\1${{ inputs.DB-port }}\2/" ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
+            else
+              echo "$RUNNER_OS is not supported"
+              exit 1
+            fi
+            cat ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
+            string ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
