--- a/.github/actions/dbConfWriter/action.yml
+++ b/.github/actions/dbConfWriter/action.yml
@@ -102,16 +102,19 @@ runs:
               paths: ${{ inputs.Root-Dir-Path }}/conf/config.properties
               statements: s|^#storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#password=mysql#has_data=false#meta_properties_path=your-meta-properties-path|storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#has_data=false#meta_properties_path=${{ steps.mysql-properties.outputs.path }}|g
 
+        # use regex
         - if: inputs.DB-port!='0'
           name: Change db port
-          uses: ./.github/actions/edit
-          with:
-            paths: ${{ inputs.Root-Dir-Path }}/conf/config.properties
-            statements: s/^(storageEngineList=127\.0\.0\.1#)[0-9]+(#.*)/\1${{ inputs.DB-port }}\2/
-
-        - if: inputs.DB-port!='0'
-          name: cat
           shell: bash
           run: |
+            if [ "$RUNNER_OS" == "Linux" ]; then
+              sudo sed -i -E "s/^(storageEngineList=127\.0\.0\.1#)[0-9]+(#.*)/\1${{ inputs.DB-port }}\2/" ${{ inputs.Root-Dir-Path }}/conf/config.properties
+            elif [ "$RUNNER_OS" == "Windows" ]; then
+              sed -i -E "s/^(storageEngineList=127\.0\.0\.1#)[0-9]+(#.*)/\1${{ inputs.DB-port }}\2/" ${{ inputs.Root-Dir-Path }}/conf/config.properties
+            elif [ "$RUNNER_OS" == "macOS" ]; then
+              sudo sed -i '' -E "s/^(storageEngineList=127\.0\.0\.1#)[0-9]+(#.*)/\1${{ inputs.DB-port }}\2/" ${{ inputs.Root-Dir-Path }}/conf/config.properties
+            else
+              echo "$RUNNER_OS is not supported"
+              exit 1
+            fi
             cat ${{ inputs.Root-Dir-Path }}/conf/config.properties
-            string ${{ inputs.Root-Dir-Path }}/conf/config.properties
