--- a/.github/actions/service/pemjaxInstall/action.yml
+++ b/.github/actions/service/pemjaxInstall/action.yml
@@ -13,14 +13,24 @@ runs:
           shell: bash
           run: |
               echo "PEMJAX_HOME=pemjax-${{ inputs.pemja-version }}-${{ runner.os}}" >> $GITHUB_ENV
+              echo "PANDAS_WHEEL=pandas-cp313t-win_amd64.whl" >> $GITHUB_ENV
+              echo "PEMJAX_SOURCE_PATH=pemjax-${{ inputs.pemja-version }}.tar.gz" >> $GITHUB_ENV
+
+        # not using cache here because only version can be cache-key, but will make it hard to test without version change
+        # pandas will support python 3.13 soon, there's no need to bother with caching
+        - name: Download Pemjax source
+          shell: bash
+          run: |
+            curl -L -o ${{ env.PEMJAX_SOURCE_PATH }} https://github.com/IGinX-THU/IGinX-resources/raw/main/resources/pemjax-${{ inputs.pemja-version }}.tar.gz
+            curl -L -o ${{ env.PANDAS_WHEEL }} https://github.com/IGinX-THU/IGinX-resources/raw/refs/heads/main/resources/python/pandas-3.0.0.dev0-cp313-cp313t-win_amd64.whl
 
         # when file changes, cache changes
-        - name: Restore wheel
+        - name: Restore pemja wheel
           id: restore-wheel
           uses: actions/cache/restore@v3
           with:
               path: ${{ env.PEMJAX_HOME }}/pemjax-${{ inputs.pemja-version }}/dist
-              key: ${{ runner.os }}-pemjax-${{ inputs.pemja-version }}-${{ hashFiles(format('dependency/src/main/resources/python/pemjax-{0}.tar.gz', inputs.pemja-version)) }}
+              key: ${{ runner.os }}-pemjax-${{ inputs.pemja-version }}-${{ hashFiles(env.PEMJAX_SOURCE_PATH) }}
 
         # only needed in Linux
         - name: Install pip
@@ -40,7 +50,7 @@ runs:
                 sudo python3.13t -m pip install setuptools wheel find-libpython build
               fi
               mkdir -p $PEMJAX_HOME
-              tar -xzf dependency/src/main/resources/python/pemjax-${{ inputs.pemja-version }}.tar.gz -C $PEMJAX_HOME
+              tar -xzf ${{ env.PEMJAX_SOURCE_PATH }} -C $PEMJAX_HOME
               ls
               cd $PEMJAX_HOME/pemjax-${{ inputs.pemja-version }}
               python3.13t setup.py bdist_wheel
@@ -61,7 +71,7 @@ runs:
           run: |
               if [ "$RUNNER_OS" == "Windows" ]; then
                 python3.13t -m pip install numpy thrift
-                python3.13t -m pip install dependency/src/main/resources/python/pandas*.whl
+                python3.13t -m pip install ${{ env.PANDAS_WHEEL }}
               else
                 sudo python3.13t -m pip install pandas==2.2.3 numpy thrift
               fi
@@ -76,4 +86,4 @@ runs:
           uses: actions/cache/save@v3
           with:
               path: ${{ env.PEMJAX_HOME }}/pemjax-${{ inputs.pemja-version }}/dist
-              key: ${{ runner.os }}-pemjax-${{ inputs.pemja-version }}-${{ hashFiles(format('dependency/src/main/resources/python/pemjax-{0}.tar.gz', inputs.pemja-version)) }}
+              key: ${{ runner.os }}-pemjax-${{ inputs.pemja-version }}-${{ hashFiles(env.PEMJAX_SOURCE_PATH) }}
