--- a/conf/config.properties
+++ b/conf/config.properties
@@ -176,7 +176,7 @@ fragmentCacheThreshold=131072
 ### 执行层配置
 ##########################
 
-enablePushDown=false
+enablePushDown=true
 
 useStreamExecutor=false
 
