--- a/conf/config.properties
+++ b/conf/config.properties
@@ -69,7 +69,7 @@ queryOptimizer=rbo
 
 # 优化器规则
 ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on,ColumnPruningRule=on,ConstantPropagationRule=on,DistinctEliminateRule=on,\
-  ConstantFoldingRule=on,FilterPushDownRule=on,JoinFactorizationRule=on,SetTransformPushDownPathUnionJoinRule=off,InFilterTransformRule=on,\
+  ConstantFoldingRule=on,FilterPushDownRule=on,JoinFactorizationRule=on,SetTransformPushDownPathUnionJoinRule=on,InFilterTransformRule=on,\
   OuterJoinEliminateRule=on
 
 # ParallelFilter触发行数
@@ -176,7 +176,7 @@ fragmentCacheThreshold=131072
 ### 执行层配置
 ##########################
 
-enablePushDown=true
+enablePushDown=false
 
 useStreamExecutor=false
 
