feat: add dm datasource

--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -189,3 +189,15 @@ runs:
                   s/chunk_size_in_bytes=1048576/chunk_size_in_bytes=8/g
                   s/write.buffer.size=104857600/write.buffer.size=1048576/g
                   s/client.connectPool.maxTotal=100/client.connectPool.maxTotal=2/g
+
+        - if: inputs.DB-name=='dm'
+          name: Setup DB
+          uses: ./.github/actions/setup/dm
+
+
+        - if: inputs.DB-name == 'dm'
+          name: Modify IGinX Config
+          uses: ./.github/actions/edit
+          with:
+            paths: conf/config.properties
+            statements: s|^#storageEngineList=127.0.0.1#5236#relational#engine=dm#username=SYSDBA#password=SYSDBA#has_data=false|storageEngineList=127.0.0.1#5236#relational#engine=dm#username=SYSDBA#password=SYSDBA#has_data=false|g
