--- a/conf/config.properties
+++ b/conf/config.properties
@@ -41,7 +41,7 @@ password=root
 #storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#password=mysql#has_data=false#meta_properties_path=your-meta-properties-path
 #storageEngineList=127.0.0.1#27017#mongodb#uri="mongodb://127.0.0.1:27017/?maxPoolSize=200&maxIdleTimeMS=60000&waitQueueTimeoutMS=50000"#has_data=false#schema.sample.size=1000#dummy.sample.size=0
 #storageEngineList=127.0.0.1#6379#redis#has_data=false#is_read_only=false#timeout=10000#data_db=1#dummy_db=0
-storageEngineList=11.101.17.22#5237#relational#engine=dm#username=SYSDBA#password=SYSDBA#has_data=false
+#storageEngineList=127.0.0.1#5236#relational#engine=dm#username=SYSDBA#password=SYSDBA#has_data=false
 # UDF定义文件夹存储路径（相对或绝对），文件夹内的文件需要按以下格式进行编写
 # %defaultUDFDir%
 #   |- udf_list         (udf函数列表及元信息文件)
